# rustlock

./: .gitignore  Cargo.toml  README.md  install-native-host.sh
extension/: background.js  content.js  manifest.json  popup.html  popup.js
src/: cli.rs  crypto.rs  error.rs  lib.rs  main.rs  password.rs  storage.rs  tui.rs  vault.rs
