[package]
name = "rustlock"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.56", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }
