[package]
name = "rustlock"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0.0"
rand = "0.9.2"
ratatui = "0.29"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }
